# project-x-pybase

./: .env  .env.example  main.py  pyproject.toml  todo.txt  차별성.txt
core/: config.py  create_db.py  crud.py  database.py  dynamic_create_db.py  exceptions.py  type_conversion.py
core/migration/: import_database.py  mig.json
core/table/: create_table.py  type_conversion.py  util.py
deprecated/: database.py
init/: create_db.py  db.py  init_db.py  init_table.py  models.py
models/: import_json.py  migration.py
