[tool.poetry]
name = "project-x-pybase"
version = "0.1.0"
description = ""
authors = ["aesthetics-of-record <111675679+aesthetics-of-record@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
